# Brevoca

./: .gitignore  Makefile  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.claude/: settings.local.json
apps/api/: pyproject.toml
apps/api/app/: __init__.py
apps/api/app/core/: config.py
apps/desktop/: package.json
apps/desktop/python/: whisper_worker.py
apps/desktop/src/main/: index.ts
apps/desktop/src/renderer/: index.html
apps/web/: eslint.config.mjs  middleware.ts  next.config.ts  package.json  tsconfig.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/(main)/: layout.tsx
apps/web/app/login/: page.tsx
apps/web/app/onboarding/: page.tsx
apps/web/components/: AppSessionProvider.tsx  ErrorState.tsx  ExportDocxDialog.tsx  GlobalSearch.tsx  ProfileMenu.tsx  WorkspaceSwitcher.tsx
apps/web/lib/client/: authed-fetch.ts  generate-docx.ts
apps/web/lib/server/: auth.ts  openai.ts  store.ts  (+3 more)
docs/: 회의록_양식.docx
infra/: docker-compose.local.yml
python/: requirements-stt.txt  whisper_worker.py
src/main/: index.ts
src/main/services/: faster-whisper.ts  ollama.ts  transcription-backend.ts  whisper-cpp.ts  whisper.ts
src/preload/: index.ts
supabase/: config.toml  seed.sql
supabase/migrations/: 20260317000100_init.sql  20260317000200_auth_workspaces.sql  20260317000300_workspace_invitations.sql  20260317000400_meetings_workspace_id.sql  20260317000500_meeting_transcript_segments.sql  20260317000600_add_canceled_statuses.sql
workers/ai/: pyproject.toml
workers/ai/worker/: __init__.py  celery_app.py  config.py
(+29 files in other folders)
