[project]
name = "brevoca-api"
version = "0.1.0"
description = "FastAPI backend for Brevoca web service"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic-settings>=2.8,<3.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
