[project]
name = "brevoca-ai-worker"
version = "0.1.0"
description = "Celery worker for Brevoca AI pipeline"
requires-python = ">=3.11"
dependencies = [
  "celery[redis]>=5.4,<6.0",
  "pydantic-settings>=2.8,<3.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
